--- a/r4babs2/week-1/study_after_workshop.qmd
+++ b/r4babs2/week-1/study_after_workshop.qmd
@@ -23,7 +23,7 @@ library(tidyverse)
 1.  💻 Adiponectin is exclusively secreted from adipose tissue and modulates a number of metabolic processes. Nicotinic acid can affect adiponectin secretion. 3T3-L1 adipocytes were treated with nicotinic acid or with a control treatment and adiponectin concentration (pg/mL) measured. The data are in [adipocytes.txt](data-raw/adipocytes.txt). Each row represents an independent sample of adipocytes and the first column gives the concentration adiponectin and the second column indicates whether they were treated with nicotinic acid or not. Estimate the mean Adiponectin concentration in each group - this means calculate the sample mean and construct a confidence interval around it for each group. This exercise forces you to bring together ideas from this workshop and from previous workshops
 
 -   How to calculate a confidence intervals (this workshop)  
--   How to summarise variables in more than one group (previous workshop)
+-   How to summarise variables in more than one group ([previous BABS 1 workshop](https://3mmarand.github.io/R4BABS/r4babs1/week-9/workshop.html#summarise))
 
 ```{r}
 #| output: false
