--- a/r4babs4/week-1/workshop.qmd
+++ b/r4babs4/week-1/workshop.qmd
@@ -195,28 +195,27 @@ think about its format) before you attempt to read it in.
 We will be working with the following data files in this workshop
 
 -   [biotech-cts.txt](data-raw/biotech-cts.txt). These are RNA-Seq data
-    from three replicates for each of two of wheat varieties 
-    ([S]{.underline}usceptible and
-    [T]{.underline}olerant) grown at two potassium conditions
-    ([C]{.underline}ontrol [K]{.underline} and [L]{.underline}ow
-    [K]{.underline}). The data are counts of the number of reads.
+    from three replicates for each of two of wheat varieties
+    ([S]{.underline}usceptible and [T]{.underline}olerant) grown at two
+    potassium conditions ([C]{.underline}ontrol [K]{.underline} and
+    [L]{.underline}ow [K]{.underline}). The data are counts of the
+    number of reads.
 
 -   [cell-bio.tsv](data-raw/cell-bio.tsv). These are measurements from a
-    Livecyte microscope, which performs live cell imaging, tracking 
-    individual cells, and measurings cell shape and size parameters 
-    for thousands of cells as they grow and divide. Measurements are 
-    taken for three replicates from each of two cell lines A and B.
+    Livecyte microscope, which performs live cell imaging, tracking
+    individual cells, and measurings cell shape and size parameters for
+    thousands of cells as they grow and divide. Measurements are taken
+    for three replicates from each of two cell lines A and B.
 
--   [immuno.csv](data-raw/immuno.csv). These are flow cytometry data 
-    for three treatments with each of two antibodies. The measures are 
-    Forward scatter, side scatter, red fluorescence and green 
-    fluorescence.  
+-   [immuno.csv](data-raw/immuno.csv). These are flow cytometry data for
+    three treatments with each of two antibodies. The measures are
+    Forward scatter, side scatter, red fluorescence and green
+    fluorescence.
 
--   [xlaevis_counts_S20.csv](data-raw/xlaevis_counts_S20.csv). These are 
-    RNA-Seq data from frogs. There are 2 siblings from each of three 
-    fertilisations and one sibling was treated with FGF and the other 
+-   [xlaevis_counts_S20.csv](data-raw/xlaevis_counts_S20.csv). These are
+    RNA-Seq data from frogs. There are 2 siblings from each of three
+    fertilisations and one sibling was treated with FGF and the other
     was a control. The data are counts of the number of reads.
-    
 
 🎬 Save these data files to the `data-raw/` folder:
 
@@ -263,7 +262,7 @@ We are opening them each in Excel to see what they look like and to get
 a sense of the structure of the data. We are not going to use Excel to
 do anything.
 
-🎬 What do you notice? Does it look like this data will be easy to 
+🎬 What do you notice? Does it look like this data will be easy to
 import and work with?
 
 ## Import the data
@@ -295,25 +294,23 @@ function:
 View(cell_bio)
 ```
 
-
-🎬 In each case, describe what is in the rows and the columns of the 
+🎬 In each case, describe what is in the rows and the columns of the
 dataframe. Where are the replicates/samples and where are the variables?
 Are there any things you'd like to fix/change?
 
 <!-- #---THINKING ANSWER--- -->
 
-
 🎬 Name of the first column in the `biotech` dataframe:
+
 ```{r}
 names(biotech)[1] <- "transcript"
 ```
 
-
 🎬 Column names in the `cell_bio` dataframe:
+
 ```{r}
 cell_bio <- janitor::clean_names(cell_bio)
 ```
-
 
 ## 
 
@@ -321,58 +318,82 @@ cell_bio <- janitor::clean_names(cell_bio)
 
 ## `summary()`
 
-R's `summary()` function is a quick way to get an overview of datasets. It gives you a six number summary for every numeric variable (the minimum, lower quartile, median, mean, upper quartile, and maximum). It also gives you a count of the number of missing values.
+R's `summary()` function is a quick way to get an overview of datasets.
+It gives you a six number summary for every numeric variable (the
+minimum, lower quartile, median, mean, upper quartile, and maximum). It
+also gives you a count of the number of missing values.
 
-
-🎬 Use the `summary()` function to get an overview of each dataframe. It works well for these datasets. What types of dataset might this be less useful for? Which dataframes and columns have missing values? Which dataframes and variables seem very skewed? Which dataframes has more than one character variable?
-
+🎬 Use the `summary()` function to get an overview of each dataframe. It
+works well for these datasets. What types of dataset might this be less
+useful for? Which dataframes and columns have missing values? Which
+dataframes and variables seem very skewed? Which dataframes has more
+than one character variable?
 
 <!-- #---THINKING ANSWER--- -->
 
 <!-- It is less useful for datasets with very many variables  -->
+
 <!-- (columns) because we aren't able to take that in all  -->
+
 <!-- at once. It is fills up the screen buffer and we can't -->
+
 <!-- see all the output at once. -->
 
 <!-- It is also less useful for datasets with many  -->
+
 <!-- character variables -->
 
-
 <!-- cell_bio has a perimeter column with 19948 NAs -->
-<!-- skew is revealed by the difference between the mean and  -->
-<!-- the median and a maximum that is much larger than all  -->
-<!-- the other values. The frogs and biotech dataframes have -->
-<!-- skewed variables. Skew is typical in RNA-Seq counts. -->
-<!-- immuno is the only dataset with more than one character -->
-<!-- variable (it has three) -->
 
+<!-- skew is revealed by the difference between the mean and  -->
+
+<!-- the median and a maximum that is much larger than all  -->
+
+<!-- the other values. The frogs and biotech dataframes have -->
+
+<!-- skewed variables. Skew is typical in RNA-Seq counts. -->
+
+<!-- immuno is the only dataset with more than one character -->
+
+<!-- variable (it has three) -->
 
 ## Quality Control
 
 ### Filtering rows
 
-The filter function selects/drops a whole row on a condition. The condition can be based on the value in one or a combination of columns.
-We specify what we want to keep with the `filter()` function. This means you might often want to negate a condition with `!`.
+The filter function selects/drops a whole row on a condition. The
+condition can be based on the value in one or a combination of columns.
+We specify what we want to keep with the `filter()` function. This means
+you might often want to negate a condition with `!`.
 
-🎬 To remove the rows in `cell_bio` with missing values in the `perimeter` column:
+🎬 To remove the rows in `cell_bio` with missing values in the
+`perimeter` column:
 
 ```{r}
 cell_bio <- cell_bio |> filter(!is.na(perimeter))
 
 ```
 
-`is.na(perimeter)` returns a logical vector (a vector of `TRUE`s and `FALSE`s) of the same length as the column. The `!` negates the logical vector so the `TRUE`s become `FALSE`s and the `FALSE`s become TRUE. This means that the `filter()` function *keeps* the rows where the perimeter column is not missing.
+`is.na(perimeter)` returns a logical vector (a vector of `TRUE`s and
+`FALSE`s) of the same length as the column. The `!` negates the logical
+vector so the `TRUE`s become `FALSE`s and the `FALSE`s become TRUE. This
+means that the `filter()` function *keeps* the rows where the perimeter
+column is not missing.
 
-🎬 There's actually a tidyverse function that does the same thing as `filter(!is.na())`
+🎬 There's actually a tidyverse function that does the same thing as
+`filter(!is.na())`
 
 ```{r}
 cell_bio <- cell_bio |> drop_na(perimeter)
 
 ```
 
+Sometimes you might want to work with a subset of data. For example, you
+might want to examine just the Media treated cells in the `immuno`
+dataset.
 
-Sometimes you might want to work with a subset of data. For example, you might want to examine just the Media treated cells in the `immuno` dataset. 
-🎬 ...
+🎬 Create a new dataframe called `immuno_media` that contains only the
+rows where `treatment` is "MEDIA"
 
 ```{r}
 immuno_media <- immuno |> 
@@ -380,10 +401,12 @@ immuno_media <- immuno |>
 
 ```
 
+Or just the Media treated cells with a `FS_Lin` between two values. You
+can apply two filters and the `between()` function to achieve this:
 
-Or just the Media treated cells with a `FS_Lin` between two values. You can apply two filters and the `between()` function to achieve this:
-
-🎬 Filter the `immuno` dataframe to keep only the rows where `FS_Lin` is between 7500 and 28000
+🎬 Create a new dataframe called `immuno_media_live` that contains only
+the rows where `treatment` is "MEDIA" and `FS_Lin` is between 7500 and
+28000:
 
 ```{r}
 immuno_media_live <- immuno |>
@@ -391,8 +414,9 @@ immuno_media_live <- immuno |>
   filter(between(FS_Lin, 7500, 28000))
 ```
 
-
-🎬 Now you try. Filter the `immuno` dataframe to keep only the rows `FS_Lin` is between 7500 and 28000 and `SS_Lin` is between 15000 and 35000
+🎬 Now you try. Create a dataframe called `immuno_live` that contains
+only the rows where `FS_Lin` is between 7500 and 28000 and `SS_Lin` is
+between 15000 and 35000:
 
 ```{r}
 #| include: false
@@ -405,10 +429,14 @@ immuno_live <- immuno |>
 
 ### Selecting columns
 
-Whilst we can always specify the columns we want to use when working with data, sometimes we find it less overwhelming to create a new dataframe with only the columns we want. The `select()` function help us here.
+Whilst we can always specify the columns we want to use when working
+with data, sometimes we find it less overwhelming to create a new
+dataframe with only the columns we want. The `select()` function help us
+here.
 
-
-🎬 Suppose we only want to work with the Susceptible varieties of wheat in the `biotech` dataframe. We can create a new dataframe with only the columns we want:
+🎬 Suppose we only want to work with the Susceptible varieties of wheat
+in the `biotech` dataframe. We can create a new dataframe with only the
+columns we want:
 
 ```{r}
 biotech_susceptible <- biotech |> 
@@ -421,31 +449,35 @@ biotech_susceptible <- biotech |>
 
 ```
 
-In fact, there are a couple of alternatives to this. We can use the `starts_with()` function to select all the columns that start with a certain string:
+In fact, there are a couple of alternatives to this. We can use the
+`starts_with()` function to select all the columns that start with a
+certain string:
 
-🎬 Select columns starting with `S` 
+🎬 Select columns starting with `S`
+
 ```{r}
 biotech_susceptible <- biotech |> 
   select(starts_with("S"))
 
 ```
+
 There is an `ends_with()` function too!
 
-
-🎬  The colon notation allows us to select a range of columns. Select columns from `SCK14_1` to `SLK14_3` 
+🎬 The colon notation allows us to select a range of columns. Select
+columns from `SCK14_1` to `SLK14_3`
 
 ```{r}
 biotech_susceptible <- biotech |> 
   select(SCK14_1:SLK14_3)
 
 ```
-Note that you need to pay attention to the order of the columns in your dataframe to use this.
 
+Note that you need to pay attention to the order of the columns in your
+dataframe to use this.
 
-
-
-🎬 You can use select and filter together. Try creating a dataframe from `frogs` which has only the columns from sibling "_A" and only the rows where `S20_C_5` is above 20. 
-
+🎬 You can use select and filter together. Try creating a dataframe from
+`frogs` which has only the columns from sibling "\_A" and only the rows
+where `S20_C_5` is above 20.
 
 ```{r}
 #| include: false
@@ -458,56 +490,113 @@ frogs_subset <- frogs |>
 
 ```
 
-
-
 ### Visualisation
 
+Histograms and density plots are useful for visualising the distribution
+of variables when we have many observations. Theya allow you to see features in the data that are not obvious from the summary statistics.
 
-Boxplots / violin plots
+-   A histogram shows the number of values in each range (bin), it is composed of touching bars. How a histogram looks depends on the number of bins used.
 
-🎬 ....
+-   A density plot shows the proportions on values in a range. The appearance of the distribution is not affected by the number of bins.
+
+
+🎬 To plot a histogram of `S20_C_5` in the `frogs` dataframe:
+
 ```{r}
+frogs |> 
+  ggplot(aes(x = S20_C_5)) +
+  geom_histogram() 
 
-```
-
-🎬 now you.....
-```{r}
-#| include: false
-
-#---CODING ANSWER---
-
-```
-
-histograms/density plots
-
-🎬 ....
-```{r}
-
-```
-
-🎬 now you.....
-```{r}
-#| include: false
-
-#---CODING ANSWER---
 
 ```
 
 
-scatter plots
+This data is very skewed - there are so many low values that we can’t
+see the tiny bars for the higher values. Logging the counts is a way to
+make the distribution more visible.
 
-🎬 ....
+🎬 To plot the distribution of log `S20_C_5` in the `frogs` dataframe as a histogram:
+
 ```{r}
+frogs |> 
+  ggplot(aes(x = log10(S20_C_5))) +
+  geom_histogram() 
+
 
 ```
 
-🎬 now you.....
-```{r}
-#| include: false
+🎬 Or a density plot:
 
-#---CODING ANSWER---
+
+```{r}
+frogs |> 
+  ggplot(aes(x = log10(S20_C_5))) +
+  geom_density()
 
 ```
+
+
+I’ve used base 10 only because it is easy to convert to the original
+scale (1 is 10, 2 is 100, 3 is 1000 etc). The warning about rows being
+removed is expected - these are the counts of 0 since you can’t log a
+value of 0. The peak at zero suggests quite a few counts of 1. We would
+expect we would expect the distribution of counts to be roughly log
+normal because this is expression of all the genes in the genome[^2].
+That peak near the low end is not expected for this distribution and
+suggests that these lower counts might be anomalies.
+
+[^2]: This a result of the [Central limit
+    theorem](https://en.wikipedia.org/wiki/Central_limit_theorem),one
+    consequence of which is that adding together lots of distributions -
+    whatever distributions they are - will tend to a normal
+    distribution.
+
+The excess number of low counts indicates we might want to create a cut
+off for quality control. The removal of low counts is a common
+processing step in ’omic data.
+
+
+If you have two groups of data, you can compare their distributions on the same plot using the `fill` aesthetic and making the fill transparent with the `alpha` argument.
+
+🎬 To plot the distribution of `area` in the `cell_bio` dataframe as a density plot, with the `clone` variable as the fill:
+
+```{r}
+cell_bio |> 
+  ggplot(aes(x = area, fill = clone)) +
+  geom_density(alpha = 0.5)
+
+```
+
+
+Boxplots and violin plots are also useful for visualising the
+distribution of a variable, especially when there are more than about 5
+groups.
+
+🎬 To plot the distribution of `area` in the `cell_bio` dataframe as a boxplot, with the `clone` variable on the x-axis:
+
+```{r}
+cell_bio |> 
+  ggplot(aes(x = clone, y = area)) +
+  geom_boxplot()
+
+```
+Suppose you want to see the distribution of many similar variables such as we have in `biotech`. You can apply the group function because the values are in separte columns than than in one column with a grouping variable. However, you can use the `pivot_longer()` function to make the dataframe long and then pipe into ggplot.
+
+🎬 Plot the distribution of the logged counts in the `biotech` dataframe as a boxplot, the samples on the x axis:
+
+
+```{r}
+biotech |> 
+  pivot_longer(cols = -transcript,
+               names_to = "sample",
+               values_to = "count") |> 
+  ggplot(aes(x = sample, y = log10(count))) +
+  geom_boxplot()
+
+```
+
+The nice thing about the pipe, is that you need not create a new dataframe to do this. You can pipe the output of `pivot_longer()` directly into `ggplot()`. This is very useful when you are exploring the data and want to try out different visualisations.
+
 
 
 
