--- a/r4babs4/week-4/workshop.qmd
+++ b/r4babs4/week-4/workshop.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Workshop"
-subtitle: "DA 3 Immunobiology"
+subtitle: "Data Analysis 3: Immunobiology - Your data analysis"
 toc: true
 toc-location: right
 editor: 
