--- a/r4babs2/week-5/study_before_workshop.qmd
+++ b/r4babs2/week-5/study_before_workshop.qmd
@@ -5,9 +5,7 @@ toc: true
 toc-location: right
 ---
 
-1.  Prepare
-
-    i.  📖 Read [Two-way ANOVA](https://3mmarand.github.io/comp4biosci/two_way_anova.html) 
+1.  📖 Read [Two-way ANOVA](https://3mmarand.github.io/comp4biosci/two_way_anova.html) 
 
 
 
