--- a/r4babs2/week-6/study_before_workshop.qmd
+++ b/r4babs2/week-6/study_before_workshop.qmd
@@ -5,12 +5,7 @@ toc: true
 toc-location: right
 ---
 
-1.  Prepare
-
-    i.  **Either** 📖 Read [xxxxx](https://3mmarand.github.io/comp4biosci/xx.html) in **OR** 📹 Watch
-
-    {{< video https://www.youtube.com/watch?xx >}}
-
+1.  📖 Read [xxxxx](https://3mmarand.github.io/comp4biosci/xx.html) 
 
 
 
